--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 				#player-section{
 				width: 100%;
 				left: 0;
-				height: 70%;
+				height: 60%;
 				position: fixed;
 				padding: auto;
 				margin-top: 15px;
@@ -232,12 +232,12 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			#player{
 			margin-bottom: 0;
 			width: 100%;
-			height: 50vh;
+			height: 45vh;
 			background-color: #000000;
 			display: block;
 			}
 			#playlist-section{
-			width: 100%;
+			width: 100vw;
 			margin-top: 50%;
 			margin-bottom: 12%;
 			display: block;
