--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>VIVA XD | Video Player</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="logo-blue-24.png" type="image/x-icon">
     <link rel="icon" href="logo-blue-24.png" type="image/x-icon">
@@ -208,6 +208,11 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 		}	
 
 		@media only screen and (max-width: 440px){
+			body{
+			padding: 4% 0%;
+			/*background-color:#606060;*/
+			
+		}
 			nav{
 				padding: 2% 0;
 			}
@@ -218,7 +223,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			font-size: 12px;
 		}
 		#caption-img{
-			display: none;
+			height: 16px;
 		}
 				#player-section{
 				width: 100%;
@@ -239,10 +244,14 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			#playlist-section{
 			width: 100vw;
 			margin-top: 50%;
-			margin-bottom: 12%;
+			left: 0
+			margin-bottom: 50px;
 			display: block;
 			position: absolute;
 			
+		}
+		.playlist{
+			margin-left: 0;
 		}
 	.playlist-name{
 			font-size: 15px;
@@ -290,7 +299,7 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 	<main>
 		<section id="player-section">
 			<div id="video-player">
-				<video id="player" controls height="200">
+				<video id="player" controls type='video/mp4'>
 					<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
 				</video>
 				<div id="caption" >
@@ -316,19 +325,19 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 	<script type="text/javascript">
 	  var videos = [];
 
-	  videos.push({name:'Ed Sheeran - Shape of You', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4'}); 
+	  videos.push({name:'Ed Sheeran - Shape of You', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/shape-of-you_iif3cg.jpg'}); 
 
-	  videos.push({name:'R-Kelly - Step in the Name of Love', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391741/R._Kelly_-_Step_In_The_Name_Of_Love_.mp4_Videos_Mp4_Free_Download__ToxicWap_ijo6qn.mp4'});
+	  videos.push({name:'R-Kelly - Step in the Name of Love', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391741/R._Kelly_-_Step_In_The_Name_Of_Love_.mp4_Videos_Mp4_Free_Download__ToxicWap_ijo6qn.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/step-in-the-name-of-love_wbtoga.jpg'});
 
-	  videos.push({name:'P.Diddy feat (Usher and Loon) - I Need A Girl', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391793/P._Diddy_Feat._Usher_And_Loon_-_I_Need_A_Girl_Part_One_HD_Dirty_.mp4_Videos_Mp4_Free_Download__ToxicWap_nhrs8d.mp4'});
+	  videos.push({name:'P.Diddy feat (Usher and Loon) - I Need A Girl', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391793/P._Diddy_Feat._Usher_And_Loon_-_I_Need_A_Girl_Part_One_HD_Dirty_.mp4_Videos_Mp4_Free_Download__ToxicWap_nhrs8d.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478604/i-need-a-girl_aw3wuq.jpg'});
 
-	  videos.push({name:'Sean Kingston - Take You There', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_67/v1511391758/Sean_Kingston_-_Take_You_There_toxicwap.com_braozj.mp4'});
-	  videos.push({name:'Sean Kingston - Beautiful Girls', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_62/v1511391794/Sean_Kingston_-_Beautiful_Girls_.mp4_Videos_Mp4_Free_Download__ToxicWap_u8d7mi.mp4'}); 
+	  videos.push({name:'Sean Kingston - Take You There', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_67/v1511391758/Sean_Kingston_-_Take_You_There_toxicwap.com_braozj.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/take-you-there_c7a32m.jpg'});
+	  videos.push({name:'Sean Kingston - Beautiful Girls', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_62/v1511391794/Sean_Kingston_-_Beautiful_Girls_.mp4_Videos_Mp4_Free_Download__ToxicWap_u8d7mi.mp4',poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478602/beautiful_girls_jw0lzk.jpg'}); 
 
 	  var div = "";
 	  for(var i = 0; i < videos.length; i++){
 	   div += "<div class='playlist' onclick='loadVideo("+ i +");'>";
-	   div += "<video src="+ videos[i].src +" poster></video>";
+	   div += "<video src="+ videos[i].src +" poster="+ videos[i].poster +"></video>";
 	   div += "<div class ='playlist-name'>";
 	   div += "<h4>"+ videos[i].name +"</h4>";
 	   div += "</div>";
