--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 				left: 0;
 				/*height: 60%;*/
 				position: fixed;
-				padding: auto;
-				/*margin-top*/
+				padding: 0;
+				margin-top: 0;
 				top: 0;
 				
 			}
@@ -244,6 +244,8 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			height: 45vh;
 			background-color: #000000;
 			display: block;
+			margin-top: 0;
+			top:0;
 			}
 			#playlist-section{
 			width: 100vw;
