--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			#playlist-section{
 			width: 100%;
 			margin-top: 50%;
-			left: 0
+			left: 0;
+			padding: 0;
 			margin-bottom: 50px;
 			/*display: block;*/
 			position: absolute;
@@ -263,6 +264,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 		}
 		.playlist{
 			margin-left: 0;
+			/*width: 100%;*/
 		}
 	.playlist-name{
 			font-size: 15px;
