--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			padding: 0;
 			margin: 0;
 			top: 0;
+			overflow-x: none;
 			/*background-color:#606060;*/
 			
 		}
