--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 			/*background-color:#606060;*/
 			font-family: 'Open Sans', sans-serif;
 			height: 100%;
-			width: 100%;
+			/*width: 100%;*/
+			/*overflow-x: hidden;*/
 		}
 
 		body::-webkit-scrollbar-track{
@@ -121,8 +122,8 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			background-color: #154177;
 			color: #FEFEFE;
 			cursor: pointer;
-			height: relative;
-			display: flex;
+			height: 100px;
+			/*display: flex;*/
 			align-items: center;
 			margin-bottom: 1%;
 		}
@@ -134,7 +135,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 
 		.playlist video{
 			width: 40%;
-			/*height: 10%;*/
+			height: 100%;
 			display: inline-block;
 			float: left;
 		}
@@ -213,7 +214,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			padding: 0;
 			margin: 0;
 			top: 0;
-			overflow-x: hidden;
+			/*overflow-x: hidden;*/
 			/*background-color:#606060;*/
 			
 		}
@@ -254,14 +255,17 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			margin-top: 50%;
 			left: 0;
 			padding: 0;
+			display: block;
 			margin-bottom: 50px;
 			/*display: block;*/
 			position: absolute;
 			box-sizing: border-box;
+			overflow-x: hidden;
 		}
 		#show{
-			/*padding: 10%;*/
+			/*padding: 0 3%;*/
 			width: 100vw;
+			margin-bottom: 50px;
 		}
 		.playlist{
 			margin-left: 0;
@@ -331,9 +335,6 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 
 			</div>
 		</section>
-		<div>
-			<p>VIVA XD  &copy; 2017</p>
-		</div>
 	</main>
 	<footer>
 		<p>VIVA XD  &copy; 2017</p>
@@ -341,14 +342,15 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 	<script type="text/javascript">
 	  var videos = [];
 
-	  videos.push({name:'Ed Sheeran - Shape of You', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/shape-of-you_iif3cg.jpg'}); 
+	  videos.push({name:'Ed Sheeran - Shape of You', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484161/shape-of-you-1_wuvdew.jpg'}); 
 
-	  videos.push({name:'R-Kelly - Step in the Name of Love', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391741/R._Kelly_-_Step_In_The_Name_Of_Love_.mp4_Videos_Mp4_Free_Download__ToxicWap_ijo6qn.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/step-in-the-name-of-love_wbtoga.jpg'});
+	  videos.push({name:'R-Kelly - Step in the Name of Love', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391741/R._Kelly_-_Step_In_The_Name_Of_Love_.mp4_Videos_Mp4_Free_Download__ToxicWap_ijo6qn.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484668/step-in-the-name-of-love-1_w0nmmu.jpg'});
 
-	  videos.push({name:'P.Diddy feat (Usher and Loon) - I Need A Girl', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391793/P._Diddy_Feat._Usher_And_Loon_-_I_Need_A_Girl_Part_One_HD_Dirty_.mp4_Videos_Mp4_Free_Download__ToxicWap_nhrs8d.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478604/i-need-a-girl_aw3wuq.jpg'});
+	  videos.push({name:'P.Diddy feat (Usher and Loon) - I Need A Girl', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391793/P._Diddy_Feat._Usher_And_Loon_-_I_Need_A_Girl_Part_One_HD_Dirty_.mp4_Videos_Mp4_Free_Download__ToxicWap_nhrs8d.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484171/i-need-a-girl-1_fqf37n.jpg'});
 
-	  videos.push({name:'Sean Kingston - Take You There', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_67/v1511391758/Sean_Kingston_-_Take_You_There_toxicwap.com_braozj.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478599/take-you-there_c7a32m.jpg'});
-	  videos.push({name:'Sean Kingston - Beautiful Girls', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_62/v1511391794/Sean_Kingston_-_Beautiful_Girls_.mp4_Videos_Mp4_Free_Download__ToxicWap_u8d7mi.mp4',poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511478602/beautiful_girls_jw0lzk.jpg'}); 
+	  videos.push({name:'Sean Kingston - Take You There', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_67/v1511391758/Sean_Kingston_-_Take_You_There_toxicwap.com_braozj.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484674/take-you-there-1_vzdfve.jpg'});
+
+	  videos.push({name:'Sean Kingston - Beautiful Girls', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_62/v1511391794/Sean_Kingston_-_Beautiful_Girls_.mp4_Videos_Mp4_Free_Download__ToxicWap_u8d7mi.mp4',poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484656/beautiful_girls_1_udxxnj.jpg'}); 
 
 	  var div = "";
 	  for(var i = 0; i < videos.length; i++){
