--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 
 		.playlist-name{
 			height: 100%;
-			width: 40%;
+			width: 55%;
 			display: inline-block;
 			vertical-align: top;
 			margin-left: 2%;
@@ -189,7 +189,7 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			display: block;
 			}
 			#playlist-section{
-			width: 100%;
+			width: 92%;
 			left: 0;
 			margin-left: 0;
 			margin-top: 70vh;
@@ -278,8 +278,8 @@ box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
 			width: 30%;
 		}
 		#spacer{
-			margin-top: 7%;
-			height: 20vh;
+			/*margin-top: 7%;*/
+			height: 17vh;
 		}
 		#caption{
 			-webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
