--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 	<main>
 		<section id="player-section">
 			<div id="video-player">
-				<video id="player" controls= "true">
+				<video id="player" controls= "true" webkit-playsinline>
 					<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
 				</video>
 				<div id="caption" >
