--- a/index.html
+++ b/index.html
@@ -2,316 +2,17 @@
 <html>
 <head>
 	<title>VIVA XD | Video Player</title>
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="logo-blue-24.png" type="image/x-icon">
-    <link rel="icon" href="logo-blue-24.png" type="image/x-icon">
-	<style>
-		@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-		body{
-			padding: 4% 3%;
-			/*background-color:#606060;*/
-			font-family: 'Open Sans', sans-serif;
-			height: 100%;
-			/*width: 100%;*/
-			/*overflow-x: hidden;*/
-		}
-
-		body::-webkit-scrollbar-track{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 7px;
-	background-color: #F5F5F5;
-}
-
-body::-webkit-scrollbar{
-	width: 7px;
-	background-color: #F5F5F5;
-}
-
-body::-webkit-scrollbar-thumb{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #2471CE;
-}
-
-		nav{
-			/*max-height:50px;*/
-			width: 100%;
-			right: 0;
-			top: 0;
-			padding: 0.2% 0;
-			position: fixed;
-			background-color: #19519F;
-			z-index: 1;
-			text-align: center;
-			-webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.75)
-		}
-
-		/*nav-img{
-			height: 100%;
-		}*/
-		#nav-image {
-			height: 40px;
-    max-height: 100%;
-    width: auto;
-    /*max-height: 72px;*/
-    /*max-width: 250px;*/
-    /*line-height: 50px; */
-}
-
-
-
-		#player-section{
-			width: 60%;
-			height: 100%;
-			display: inline-block;
-			margin-right: 1%;
-			position: fixed;
-			padding: auto;
-			margin-top: 1%;
-		}
-
-		#playlist-section{
-			width: 31%;
-			padding: 0 1%;
-			margin-top: 1%;
-			margin-bottom: 5%;
-			display: inline-block;
-			position: relative;
-			float: right;
-		}
-
-		#player{
-			margin-bottom: 0;
-			width: 100%;
-			height: 70vh;
-			background-color: #000000;
-			display: block;
-		}
-
-		#caption{
-			background-color: #2471CE;
-			color: #FEFEFE;
-			padding: 1% 2%;
-			/*height: 50px;*/
-			margin-top: 0;
-		}
-
-		#caption-img{
-			/*height: ;*/
-		}
-
-		.line{
-			height: 100%;
-			display: inline-block;
-			vertical-align: top;
-			margin-right: 2%;
-		}
-
-		.line.name{
-			width: 70%;
-		}
-
-		.line h3, h5{
-			margin: 0;
-		}
-		.playlist{
-			width: 100%;
-			padding: 1% 2%;
-			background-color: #154177;
-			color: #FEFEFE;
-			cursor: pointer;
-			height: 100px;
-			/*display: flex;*/
-			align-items: center;
-			margin-bottom: 1%;
-		}
-
-
-		.playlist:hover{
-			background-color: #2471CE;
-		}
-
-		.playlist video{
-			width: 40%;
-			height: 100%;
-			display: inline-block;
-			float: left;
-		}
-
-		.playlist-name{
-			height: 100%;
-			width: 55%;
-			display: inline-block;
-			vertical-align: top;
-			margin-left: 2%;
-			position: relative;
-		}
-
-		.playlist-name h3{
-			display: inline-block;
-			vertical-align: top;
-			position: relative;
-		}
-
-		footer{
-			width: 100%;
-			bottom: 0;
-			/*height: 5%;*/
-			left: 0;
-			background-color: #fefefe;
-			color: #19519F;
-			position: fixed;
-			text-align: center;
-			padding: 0.1% 0;
-		}
-
-		@media only screen and (max-width: 770px){
-			body{
-				margin: 0;
-				padding: 0;
-			}
-				#player-section{
-				width: 100%;
-				left: 0;
-				height: 50vh;
-				position: fixed;
-				padding: auto;
-				z-index: 1;
-				margin-top: 15px;
-			}
-			#player{
-			margin-bottom: 0;
-			width: 100%;
-			height: 60vh;
-			background-color: #000000;
-			display: block;
-			}
-			#playlist-section{
-			width: 92%;
-			left: 0;
-			margin-left: 0;
-			margin-top: 70vh;
-			margin-bottom: 20%;
-			display: block;
-			position: absolute;
-			padding: 0 2%;
-			
-		}
-		#spacer{
-			margin-top: 8%;
-		}
-		#caption{
-			-webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-		    -moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-			box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-		}
-		}	
-
-		@media only screen and (max-width: 440px){
-			body, html{
-			padding: 0;
-			margin: 0;
-			top: 0;
-			/*overflow-x: hidden;*/
-			/*background-color:#606060;*/
-			
-		}
-			nav{
-				padding: 2% 0;
-				display: none;
-			}
-			#nav-image {
-			display: none;
-		}
-		#video-name{
-			font-size: 12px;
-		}
-		#caption-img{
-			height: 16px;
-		}
-				#player-section{
-				width: 100%;
-				left: 0;
-				/*height: 60%;*/
-				position: fixed;
-				padding: 0;
-				margin-top: 0;
-				top: 0;
-				
-			}
-			#player{
-			margin-bottom: 0;
-			width: 100%;
-			height: 45vh;
-			background-color: #000000;
-			display: block;
-			margin-top: 0;
-			top:0;
-			}
-			#playlist-section{
-			width: 100%;
-			margin-top: 50%;
-			left: 0;
-			padding: 0;
-			display: block;
-			margin-bottom: 50px;
-			/*display: block;*/
-			position: absolute;
-			box-sizing: border-box;
-			overflow-x: hidden;
-		}
-		#show{
-			/*padding: 0 3%;*/
-			width: 100vw;
-			margin-bottom: 50px;
-		}
-		.playlist{
-			margin-left: 0;
-			/*width: 100%;*/
-		}
-	.playlist-name{
-			font-size: 15px;
-		}
-		.playlist video{
-			width: 30%;
-		}
-		#spacer{
-			/*margin-top: 7%;*/
-			height: 17vh;
-		}
-		#caption{
-			-webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-		    -moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-			box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
-		}
-		footer{
-			margin-top: 50px;
-		}
-		footer p{
-			line-height: 100%;
-		}
-		}
-	@media only screen and (min-width: 800px){
-			#video-player{
-			-webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
-		}
-	}	
-
-	</style>
-
-	
- 
+	<link rel="shortcut icon" href="assets/logo-blue-24.png" type="image/x-icon">
+  <link rel="icon" href="assets/logo-blue-24.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
 		<nav>
-			
-			<img src="viva.png" id ="nav-image">
-			
+			<img src="assets/viva.png" id ="nav-image">
 		</nav>
 	</header>
 	<main>
@@ -319,14 +20,18 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 			<div id="video-player">
 				<video id="player" controls= "true" playsinline>
 					<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
+					<object>
+     				<embed src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type= "application/x-shockwave-flash" allowfullscreen="false" allowscriptaccess="always" />
+   				</object>
 				</video>
 				<div id="caption" >
 					<div class="line">
-				 		<img src="logo_small.png" id="caption-img">
+				 		<img src="assets/logo_small.png" id="caption-img">
 				 	</div>
 				 	<div class="line name">
 						<h3 id = "video-name">Ed Sheeran - The shape of you </h3>
 					</div>
+				</div>	
 			</div>
 		</section>
 		<section id = "spacer">	</section>
@@ -339,43 +44,6 @@ box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 	<footer>
 		<p>VIVA XD  &copy; 2017</p>
 	</footer>
-	<script type="text/javascript">
-	  var videos = [];
-
-	  videos.push({name:'Ed Sheeran - Shape of You', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484161/shape-of-you-1_wuvdew.jpg'}); 
-
-	  videos.push({name:'R-Kelly - Step in the Name of Love', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391741/R._Kelly_-_Step_In_The_Name_Of_Love_.mp4_Videos_Mp4_Free_Download__ToxicWap_ijo6qn.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484668/step-in-the-name-of-love-1_w0nmmu.jpg'});
-
-	  videos.push({name:'P.Diddy feat (Usher and Loon) - I Need A Girl', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391793/P._Diddy_Feat._Usher_And_Loon_-_I_Need_A_Girl_Part_One_HD_Dirty_.mp4_Videos_Mp4_Free_Download__ToxicWap_nhrs8d.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484171/i-need-a-girl-1_fqf37n.jpg'});
-
-	  videos.push({name:'Sean Kingston - Take You There', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_67/v1511391758/Sean_Kingston_-_Take_You_There_toxicwap.com_braozj.mp4', poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484674/take-you-there-1_vzdfve.jpg'});
-
-	  videos.push({name:'Sean Kingston - Beautiful Girls', src:'http://res.cloudinary.com/dmz79kgf0/video/upload/q_62/v1511391794/Sean_Kingston_-_Beautiful_Girls_.mp4_Videos_Mp4_Free_Download__ToxicWap_u8d7mi.mp4',poster:'http://res.cloudinary.com/dmz79kgf0/image/upload/v1511484656/beautiful_girls_1_udxxnj.jpg'}); 
-
-	  var div = "";
-	  for(var i = 0; i < videos.length; i++){
-	   div += "<div class='playlist' onclick='loadVideo("+ i +");'>";
-	   div += "<video src="+ videos[i].src +" poster="+ videos[i].poster +"></video>";
-	   div += "<div class ='playlist-name'>";
-	   div += "<h4>"+ videos[i].name +"</h4>";
-	   div += "</div>";
-	   div += "</div>";
-	  }
-
-	   document.getElementById("show").innerHTML = div;
-
-	   function loadVideo(index) {
-	   		video = document.getElementById('player');
-	   		source = document.querySelectorAll("#player source");
-			source[0].src = videos[index].src;
-			video_name = videos[index].name;
-			document.getElementById("video-name").innerHTML = video_name;
-			video.load();
-			video.play();
-	   }
-
-
-	 
-  </script>
+	<script src="js/app.js"></script>
 </body>
 </html>
