--- a/index.html
+++ b/index.html
@@ -18,12 +18,26 @@
 	<main>
 		<section id="player-section">
 			<div id="video-player">
-				<video id="player" controls= "true" playsinline>
-					<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
-					<object>
-     				<embed src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type= "application/x-shockwave-flash" allowfullscreen="false" allowscriptaccess="always" />
-   				</object>
-				</video>
+				<div id="video-container">
+					<video id="player" controls= "true" playsinline>
+						<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
+						<object>
+	     				<embed src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type= "application/x-shockwave-flash" allowfullscreen="false" allowscriptaccess="always" />
+	   				</object>
+					</video>
+					<div id="video-controls">
+						<input type="range" id="seek-bar" value="0">
+						<div id="custom-seekbar">
+			  				<span id="fill"></span>
+						</div>
+						<button type="button" id="play-pause" class="play"><img src="assets/play.png" id="play-icon"></button>
+						<div id="bottom-right">
+							<button type="button" id="mute"><img src="assets/unmute.png" id="mute-icon"></button>
+							<input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+							<button type="button" id="full-screen"><img src="assets/fullscreen.png"></button>
+						</div>	
+					</div>
+				</div>
 				<div id="caption" >
 					<div class="line">
 				 		<img src="assets/logo_small.png" id="caption-img">
