--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<section id="player-section">
 			<div id="video-player">
 				<div id="video-container">
-					<video id="player" controls= "true" playsinline>
+					<video id="player" playsinline>
 						<source src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type="video/mp4">
 						<object>
 	     				<embed src="http://res.cloudinary.com/dmz79kgf0/video/upload/q_71/v1511391630/Ed_ohshlf.mp4" type= "application/x-shockwave-flash" allowfullscreen="false" allowscriptaccess="always" />
