--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 		<p>VIVA XD  &copy; 2017</p>
 	</footer>
 	<script src="js/app.js"></script>
+	<script src="js/loadvideo.js"></script>
 </body>
 </html>
